--- a/src/components/layouts/wxba-test/style.css
+++ b/src/components/layouts/wxba-test/style.css
@@ -7,13 +7,18 @@
   }
   
   .timer-text {
-    background: rgb(230, 153, 12);
+    background: #c59f2c;
     padding: 15px;
     margin-top: 20px;
     margin-right: 20px;
-    border: 5px solid rgb(255, 189, 67);
+    border: 5px solid #cba842;
     border-radius: 15px;
     text-align: center;
+  }
+
+  .timer-item {
+    font-size: 18px;
+    font-weight: 800;
   }
   
   /* ANSWERS/RIGHT SECTION */
